# CV_Project1

./: .gitignore  4x3_video.txt  5x4_video.txt  CMakeLists.txt  README.md  gg.txt  main.cpp  notes.txt  results.ipynb
.ipynb_checkpoints/: results-checkpoint.ipynb
CameraCalibration/: CMakeLists.txt  main.cpp
CameraCalibration/include/: cameracalib.h  frameselect.h  patrecog.h
CameraCalibration/src/: cameracalib.cpp  frameselect.cpp  patrecog.cpp
FrameSelection/: main.cpp
FrameSelection/include/: frameselect.h  patrecog.h
FrameSelection/src/: frameselect.cpp  patrecog.cpp
PD_CC/: main.cpp
PD_CC.1/: CMakeLists.txt  main.cpp
PD_CC.1/data/: cam1_chess  cam1_circulos  cam2_anillos  cam2_circulos
PD_CC/data/: cam1_anillos  cam2_chess
PD_CC/include/: camcalib.h  patrecog.h
PD_CC/src/: camcalib.cpp  patrecog.cpp
PatternDetection/: CMakeLists.txt  main.cpp
PatternDetection/include/: patrecog.h
PatternDetection/src/: camcalib.cpp  patrecog.cpp
PatternDetection_SmartSelector/include/: patrecog.h
PatternDetection_SmartSelector/src/: patrecog.cpp
SimplePatternDetection/: main.cpp
Version0/: main.cpp
Version1/: main.cpp
Version1/include/: patrecog.h
Version1/src/: patrecog.cpp
data/: data.txt
